# ai-workflows

./: .containerignore  .gitignore  .packit.yaml  .pre-commit-config.yaml  .secrets.baseline  .testing-farm.yaml  AGENTS.md  CONTRIBUTING.md  Containerfile.c10s  Containerfile.c9s  Containerfile.c9s-tests  Containerfile.jira-issue-fetcher  Containerfile.mcp  Containerfile.mcp.containerignore  Containerfile.mr-cleanup  Containerfile.phoenix  Containerfile.redis-commander  Containerfile.supervisor  Containerfile.tests  Containerfile.trace-server  Makefile  Makefile.tests  README-agents.md  README-supervisor.md  README.md  SECURITY.md  ai_providers_data_flow.md  beeai-reasoning.patch  brew_konflux_data_flow.md  claude-triage-mock.md  compose.yaml  data_retention_policy.md  e2e-ci-setup.md  env.template  gitlab_distgit_data_flow.md  jira_data_flow.md  jira_label_workflow_routing.md  justfile  monitoring.md  openinference-reasoning.patch  (+13 more)
adk-workflows/: Containerfile  Makefile  README.md  compose.yaml
agents/: backport_agent.py  backport_verification_agent.py  build_agent.py  clones_analyzer_agent.py  log_agent.py  merge_request_agent.py  metrics_middleware.py  package_update_steps.py  rebase_agent.py  rebuild_agent.py  tasks.py  triage_agent.py  utils.py
agents_as_skills/: README.md  install-skills.py
beeai/: .gitignore  Containerfile  Containerfile.c10s  Containerfile.c9s  Containerfile.c9s-tests  Containerfile.issue-fetcher  Containerfile.mcp  Containerfile.tests  Makefile  Makefile.tests  README-agents.md  README-supervisor.md  README.md  beeai-instrumentation.patch  compose.yaml  pyproject.toml
common/: __init__.py  constants.py  models.py  utils.py  version_utils.py
docs/: e2e-testing.md  mr_consolidation_architecture.md
files/: internal_dist-git_host_keys  internal_dist-git_ssh.conf  ipa_redhat_com  nitrate.conf
goose-container/: 0001-google-Add-better-error-output.patch  Containerfile  Containerfile.build  goose-config.yaml
goose-recipes/: issue-details.yaml  reverse-dependencies.yaml  test-reverse-dependencies.yaml
jira_issue_fetcher/: jira_issue_fetcher.py
llama-stack/: Makefile  README.md  compose.yaml  env.template  llama_stack_config.yaml  requirements.txt  workflow_runner.py
mcp_server/: aiohttp_client_session_mock.py  copr_tools.py  distgit_tools.py  gateway.py  gitlab_tools.py  jira_tools.py  lookaside_tools.py  testing_farm_tools.py  utils.py
openshift/: Makefile  README.md  configmap-agents-env.yml  configmap-chat-env.yml  configmap-endpoints-env.yml  configmap-jira-env.yml  configmap-jira-issue-fetcher-env.yml  configmap-jira-issue-fetcher-filter-env.yml  configmap-jira-issue-fetcher-todo-env.yml  configmap-kerberos-env.yml  configmap-otel-collector-config.yml  configmap-x-beeai-agent-configmap.yml  cronjob-cleanup-git-repos.yml  cronjob-jira-issue-fetcher-todo.yml  cronjob-jira-issue-fetcher.yml  cronjob-jira-postponed-issue-fetcher.yml  cronjob-mr-cleanup.yml  cronjob-supervisor-collector.yml  deploy.sh  deployment-backport-agent-c10s.yml  deployment-backport-agent-c9s.yml  deployment-mcp-gateway.yml  deployment-mr-consolidation-agent-c10s.yml  deployment-mr-consolidation-agent-c9s.yml  deployment-otel-collector.yml  deployment-phoenix-db.yml  deployment-phoenix.yml  deployment-rebase-agent-c10s.yml  deployment-rebase-agent-c9s.yml  deployment-rebuild-agent-c10s.yml  deployment-rebuild-agent-c9s.yml  deployment-redis-commander.yml  deployment-supervisor-processor.yml  deployment-triage-agent.yml  deployment-valkey.yml  imagestream-beeai-agent.yml  imagestream-mcp-gateway.yml  imagestream-mr-cleanup.yml  imagestream-phoenix-db.yml  imagestream-phoenix.yml  (+14 more)
plans/: run-triage.sh  triage-e2e.fmf
playbooks/: ansible.cfg  inventory.ini  issue_details.yaml  rebase-package.yaml
scripts/: autobump-version.py  (+10 more)
ymir/common/: __init__.py  base_utils.py  config.py  constants.py  logging_setup.py  merge_queue.py  mock_repos.py  models.py  product_pages.py  pyproject.toml  requirements.txt  utils.py  validators.py  version_utils.py
ymir/common/tests/unit/: test_base_utils.py  test_models.py  test_product_pages.py  test_utils.py  test_version_utils.py
ymir/tools/: base.py  constants.py  gateway_utils.py  http.py  pyproject.toml  requirements.txt
ymir/tools/privileged/: aiohttp_client_session_mock.py  copr.py  copr_tools.py  distgit.py  distgit_tools.py  errata.py  gateway.py  gitlab.py  gitlab_tools.py  jira.py  jira_tools.py  logdetective.py  lookaside.py  lookaside_tools.py  maintainer_rules.py  reviewer_resolver.py  testing_farm.py  utils.py  zstream_search.py
ymir/tools/privileged/tests/data/: README.md
ymir/tools/privileged/tests/unit/: conftest.py  test_copr.py  test_distgit.py  test_gateway.py  test_gateway_utils.py  test_gitlab.py  test_gitlab_tools.py  test_http.py  test_jira.py  test_jira_tools.py  test_logdetective.py  test_lookaside.py  test_reviewer_resolver.py  test_testing_farm.py  test_utils.py  test_zstream_search.py
ymir/tools/unprivileged/: analyze_ewa_testrun.py  commands.py  distgit_detector.py  filesystem.py  gateway.py  greenwave.py  read_logfile.py  read_readme.py  search_resultsdb.py  specfile.py  text.py  upstream_search.py  upstream_tools.py  version_mapper.py  wicked_git.py
ymir/tools/unprivileged/tests/unit/: conftest.py  test_commands.py  test_distgit_detector.py  test_filesystem.py  test_gateway.py  test_specfile.py  test_text.py  test_upstream_tools.py  test_wicked_git.py
ymir_common/: __init__.py  models.py  pyproject.toml  utils.py  version_utils.py
ymir_common/tests/unit/: test_models.py  test_utils.py  test_version_utils.py
ymir_tools/: pyproject.toml
ymir_tools/privileged/: copr_tools.py  distgit_tools.py  gateway.py  gitlab_tools.py  jira_tools.py  lookaside_tools.py  zstream_search.py
ymir_tools/privileged/tests/unit/: test_copr.py  test_distgit_tools.py  test_gitlab_tools.py  test_jira_tools.py  test_lookaside.py
ymir_tools/unprivileged/: commands.py  filesystem.py  gateway.py  patch_validator.py  specfile.py  text.py  upstream_tools.py  version_mapper.py  wicked_git.py  zstream_search.py
(+288 files in other folders)
