[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "ymir"
version = "0.1.0"
description = "AI-powered RHEL package maintenance automation"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements-global.txt", "requirements.txt"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "flexmock>=0.12.2",
    "coverage>=7.6.0",
    "pytest-xdist>=3.6.0",
    "pytest-html>=4.1.1",
    "httpx>=0.28.0",
    "koji",
    "pyforgejo==2.0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["ymir"]
exclude = ["ymir/common", "ymir/tools"]

[tool.uv.workspace]
members = ["ymir/common", "ymir/tools"]

[tool.uv.sources]
ymir-common = { workspace = true }
ymir-tools = { workspace = true }
