[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "ymir-common"
version = "0.1.0"
description = "Common utilities shared across Ymir AI workflows"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["../../requirements-global.txt", "requirements.txt"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "flexmock>=0.12.2",
]

[tool.hatch.build]
dev-mode-dirs = ["../.."]

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "ymir/common/__init__.py"
"config.py" = "ymir/common/config.py"
"constants.py" = "ymir/common/constants.py"
"models.py" = "ymir/common/models.py"
"utils.py" = "ymir/common/utils.py"
"validators.py" = "ymir/common/validators.py"
"version_utils.py" = "ymir/common/version_utils.py"
