[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ymir-tools"
version = "0.1.0"
description = "Ymir MCP tools for AI workflows"
requires-python = ">=3.13"
dependencies = [
    "ymir-common>=0.1.0",
    "beeai-framework[mcp]==0.1.55",
    "pydantic>=2.0",
    "aiohttp>=3.12.15",
    "aiofiles>=24.1.0",
    "copr>=1.129",
    "flexmock>=0.12.2",
    "GitPython>=3.1.0",
    "koji",
    "ogr>=0.55.0",
    "rpm>=0.4.0",
    "specfile>=0.36.0",
]

[project.scripts]
ymir-privileged-gateway = "ymir.tools.privileged.gateway:main"
ymir-unprivileged-gateway = "ymir.tools.unprivileged.gateway:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build]
dev-mode-dirs = ["../.."]

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "ymir/tools/__init__.py"
"gateway_utils.py" = "ymir/tools/gateway_utils.py"
"privileged" = "ymir/tools/privileged"
"unprivileged" = "ymir/tools/unprivileged"
