[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "ymir-tools"
version = "0.1.0"
description = "Ymir MCP tools for AI workflows"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["../../requirements-global.txt", "requirements.txt"]

[project.scripts]
ymir-privileged-gateway = "ymir.tools.privileged.gateway:main"
ymir-unprivileged-gateway = "ymir.tools.unprivileged.gateway:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build]
dev-mode-dirs = ["../.."]

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "ymir/tools/__init__.py"
"gateway_utils.py" = "ymir/tools/gateway_utils.py"
"privileged" = "ymir/tools/privileged"
"unprivileged" = "ymir/tools/unprivileged"
